--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,21 @@
 {
-  "presets": [
-    ["env", { "modules": false }],
-    "stage-2"
-  ],
-  "plugins": ["transform-runtime"],
-  "comments": false,
-  "env": {
-    "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": [ "istanbul" ]
-    }
-  }
+    "presets": [
+        "es2015",
+        "stage-2",
+        ["env", { "modules": false }],
+    ],
+    "plugins": [
+        "transform-runtime",
+        "transform-vue-jsx",
+    ],
+    "comments": false,
+    "env": {
+        "test": {
+            "presets": [
+                "env",
+                "stage-2",
+            ],
+            "plugins": ["istanbul"],
+        },
+    },
 }
